projects/amiya.akn/src/infrastructure/kubernetes/traefik/security/allow-from-internal.networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-from-internal
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Allow ingress traffic from internal networks to Traefik ingress pods.
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 636
          protocol: TCP
      from:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 100.64.0.0/10
